--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,3 +7,4 @@ urllib3==1.24.1      # CVE-2019-11324
 tensorflow==1.13.1   # CVE-2020-15202
 pillow==6.2.1        # CVE-2020-10177
 paramiko==2.4.2      # CVE-2018-7750
+# trigger
